Replace startup animation with logo splash screen: 1s fade-in, 1.5s hold, 1s fade-out, boot progress bar waits until splash finishes

--- a/index.html
+++ b/index.html
@@ -56,28 +56,9 @@
 </head>
 
 <body>
-    <!-- Startup Animation -->
-    <div id="startupAnimation" class="startup-animation">
-        <div class="startup-bg">
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-            <div class="startup-particle"></div>
-        </div>
-        <div class="startup-content">
-            <div class="startup-logo-container">
-                <i class="fas fa-fish startup-fish-icon"></i>
-            </div>
-            <h1 class="startup-title">Veltra</h1>
-            <p class="startup-subtitle">Initializing your workspace...</p>
-            <div class="startup-progress">
-                <div class="startup-progress-bar"></div>
-            </div>
-        </div>
+    <!-- Splash Screen -->
+    <div id="veltraSplash">
+        <img src="Assets/veltra-logo.png" alt="Veltra" id="splashLogo" draggable="false">
     </div>
 
     <div id="bootloader">
